# gemini-grpc-demo

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/google/: google.api.rs  google.cloud.aiplatform.v1.rs
