[package]
name = "grpc-gemini-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
gcp_auth = "0.12.2"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.38.0", features = ["full"] }
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
tonic-types = "0.12.0"

[build-dependencies]
tonic-build = { version = "0.12.0", features = ["prost"] }
